Bug 1004306 - AudioChannelService should drop references to Agents when their window is destroyed, r=mchen, r=rlin